cmake_minimum_required(VERSION 3.29)
if (WIN32)
    if (POLICY CMP0091)
      cmake_policy(SET CMP0091 NEW)
    endif (POLICY CMP0091)
endif ()
project("cef")
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
if (WIN32)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
endif ()
file(GLOB HEADS ${PROJECT_SOURCE_DIR}/src/*.h)
file(GLOB SOURS ${PROJECT_SOURCE_DIR}/src/*.cpp)
if (WIN32)
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
else ()
    set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
endif ()
#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:mainCRTStartup")
if (WIN32)
    add_executable(${PROJECT_NAME} WIN32 ${HEADS} ${SOURS})
else ()
    add_executable(${PROJECT_NAME} ${HEADS} ${SOURS})
endif ()
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR})
target_link_directories(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/lib)
if (WIN32)
    target_link_libraries(${PROJECT_NAME} libcef cef_sandbox libcef_dll_wrapper comctl32 gdi32 rpcrt4 shlwapi ws2_32 Advapi32 dbghelp Delayimp OleAut32 PowrProf Propsys psapi)
else ()
    target_link_libraries(${PROJECT_NAME} libcef.so libcef_dll_wrapper.a gtk-4)
endif ()
#set_target_properties(${PROJECT_NAME} PROPERTIES WIN32_EXECUTABLE ON)
#使用MSVC时链接MT多线程静态库
#必须要在project或者enable_lanuage之前，设置policy CMP0091为NEW才能生效
if (WIN32)
    set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
endif ()
if (WIN32)
add_definitions(-DNOMINMAX)
#add_definitions(-DWIN32)
add_definitions(-D_WINDOWS)
add_definitions(-D__STDC_CONSTANT_MACROS)
add_definitions(-D__STDC_FORMAT_MACROS)
#add_definitions(-D_WIN32)
add_definitions(-DUNICODE)
add_definitions(-D_UNICODE)
add_definitions(-DWINVER=0x0601)
add_definitions(-D_WIN32_WINNT=0x601)
add_definitions(-DWIN32_LEAN_AND_MEAN)
add_definitions(-D_HAS_EXCEPTIONS=0)
add_definitions(-DPSAPI_VERSION=1)
add_definitions(-DCEF_USE_SANDBOX)
add_definitions(-DCEF_USE_ATL)
add_definitions(-D_HAS_ITERATOR_DEBUGGING=0)
#屏蔽 CEF 框架中低版本 C++ 警告
add_definitions(-D_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS)
else ()
set_target_properties(${PROJECT_NAME} PROPERTIES
    INSTALL_RPATH "$ORIGIN"
    BUILD_WITH_INSTALL_RPATH TRUE
)
endif ()
